[gd_scene load_steps=8 format=3 uid="uid://ct8febbr3utfj"]

[ext_resource type="Script" path="res://enemy_3.gd" id="1_6x7ft"]
[ext_resource type="Texture2D" uid="uid://d1sd81fyyejmd" path="res://resources/goblin.png" id="2_degxl"]
[ext_resource type="PackedScene" uid="uid://codjmc6lnljyv" path="res://Healthbar/Healthbar.tscn" id="3_bql35"]

[sub_resource type="AtlasTexture" id="AtlasTexture_raxqu"]
atlas = ExtResource("2_degxl")
region = Rect2(0, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_ayocl"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_raxqu")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_68ol4"]
radius = 217.665

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bmom6"]

[node name="enemy 3" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 2
floor_stop_on_slope = false
script = ExtResource("1_6x7ft")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_ayocl")

[node name="detect" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="detect"]
shape = SubResource("CircleShape2D_68ol4")

[node name="collision" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_bmom6")

[node name="hit" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 3

[node name="CollisionShape2D2" type="CollisionShape2D" parent="hit"]
scale = Vector2(2, 2)
shape = SubResource("RectangleShape2D_bmom6")

[node name="Healthbar" parent="." instance=ExtResource("3_bql35")]
offset_left = -20.0
offset_top = -14.0
offset_right = 20.0
offset_bottom = -10.0
metadata/_edit_use_anchors_ = true

[node name="DamageNumbers" type="Node2D" parent="."]

[node name="DamageButton" type="Button" parent="."]
offset_right = 8.0
offset_bottom = 8.0
metadata/_edit_use_anchors_ = true

[connection signal="body_entered" from="detect" to="." method="_on_detect_body_entered"]
[connection signal="body_exited" from="detect" to="." method="_on_detect_body_exited"]
[connection signal="body_entered" from="hit" to="." method="_on_hit_body_entered"]
[connection signal="pressed" from="DamageButton" to="." method="_on_damage_button_pressed"]
